feat: initialize Spring Security configuration with BCrypt encoder and dynamic CORS settings